@@ -192,11 +192,10 @@ capplet_init (GOptionContext *context,
 	textdomain (GETTEXT_PACKAGE);
 #endif
 	
-#if GLIB_CHECK_VERSION (2, 12, 0)
-        g_option_context_set_translation_domain (context, GETTEXT_PACKAGE);
-#endif
-	
 	if (context) {
+#if GLIB_CHECK_VERSION (2, 12, 0)
+		g_option_context_set_translation_domain (context, GETTEXT_PACKAGE);
+#endif
 		g_option_context_add_group (context, gtk_get_option_group (TRUE));
 		
 		if (!g_option_context_parse (context, argc, argv, &err)) {
